--- a/languages/fr_FR/cheatengine-x86_64.po
+++ b/languages/fr_FR/cheatengine-x86_64.po
@@ -10034,7 +10034,7 @@ msgstr "&Copier"
 
 #: tfrmautoinject.cut1.caption
 msgid "Cu&t"
-msgstr "Coller"
+msgstr "Couper"
 
 #: tfrmautoinject.emplate1.caption
 msgid "Template"
@@ -10051,7 +10051,7 @@ msgstr "Fichier"
 
 #: tfrmautoinject.find1.caption
 msgid "&Find..."
-msgstr ""
+msgstr "&Trouver..."
 
 #: tfrmautoinject.inject1.caption
 msgid "Inject"
@@ -10059,29 +10059,29 @@ msgstr ""
 
 #: tfrmautoinject.injectincurrentprocess1.caption
 msgid "Inject into current process"
-msgstr ""
+msgstr "Injecter dans le Processus actuel"
 
 #: tfrmautoinject.injectintocurrentprocessandexecute1.caption
 msgid "Inject into current process and execute"
-msgstr ""
+msgstr "Injecter dans le Processus actuel et exécuter"
 
 #: tfrmautoinject.load1.caption
 msgctxt "tfrmautoinject.load1.caption"
 msgid "Open"
-msgstr ""
+msgstr "Ouvrir"
 
 #: tfrmautoinject.menuaobinjection.caption
 msgid "AOB Injection"
-msgstr ""
+msgstr "Injection AOB"
 
 #: tfrmautoinject.menufullinjection.caption
 msgid "Full Injection"
-msgstr ""
+msgstr "Injection complète"
 
 #: tfrmautoinject.menuitem1.caption
 msgctxt "TFRMAUTOINJECT.MENUITEM1.CAPTION"
 msgid "Replace"
-msgstr ""
+msgstr "Remplacer"
 
 #: tfrmautoinject.micalllua.caption
 msgid "Call CE lua function"
@@ -10109,7 +10109,7 @@ msgstr ""
 
 #: tfrmautoinject.new1.caption
 msgid "New Tab"
-msgstr ""
+msgstr "Nouvel onglet"
 
 #: tfrmautoinject.opendialog1.title
 msgctxt "tfrmautoinject.opendialog1.title"
@@ -10141,17 +10141,17 @@ msgstr ""
 
 #: tfrmautoinject.undo1.caption
 msgid "&Undo"
-msgstr ""
+msgstr "&Annuler"
 
 #: tfrmautoinject.view1.caption
 msgctxt "tfrmautoinject.view1.caption"
 msgid "View"
-msgstr ""
+msgstr "Vue"
 
 #: tfrmbreakpointcondition.button1.caption
 msgctxt "TFRMBREAKPOINTCONDITION.BUTTON1.CAPTION"
 msgid "OK"
-msgstr ""
+msgstr "OK"
 
 #: tfrmbreakpointcondition.button2.caption
 msgctxt "TFRMBREAKPOINTCONDITION.BUTTON2.CAPTION"
@@ -10172,11 +10172,11 @@ msgstr ""
 
 #: tfrmbreakpointcondition.rbcomplex.caption
 msgid "Complex"
-msgstr ""
+msgstr "Complexe"
 
 #: tfrmbreakpointcondition.rbeasy.caption
 msgid "Easy"
-msgstr ""
+msgstr "Facile"
 
 #: tfrmbreakpointcondition.tabsheet1.caption
 msgid "Easy formula"
@@ -10184,7 +10184,7 @@ msgstr "Formule simple"
 
 #: tfrmbreakpointcondition.tabsheet2.caption
 msgid "Complex function"
-msgstr ""
+msgstr "Fonction complexe"
 
 #: tfrmbreakpointlist.caption
 msgid "Breakpoint list"
@@ -10250,7 +10250,7 @@ msgstr ""
 #: tfrmbreakthread.button1.caption
 msgctxt "TFRMBREAKTHREAD.BUTTON1.CAPTION"
 msgid "OK"
-msgstr ""
+msgstr "OK"
 
 #: tfrmbreakthread.button2.caption
 msgctxt "TFRMBREAKTHREAD.BUTTON2.CAPTION"
@@ -10268,7 +10268,7 @@ msgstr ""
 #: tfrmcapturedtimers.button1.caption
 msgctxt "TFRMCAPTUREDTIMERS.BUTTON1.CAPTION"
 msgid "Close"
-msgstr ""
+msgstr "Fermer"
 
 #: tfrmcapturedtimers.button2.caption
 msgid "Send timer messages"
@@ -10281,7 +10281,7 @@ msgstr ""
 #: tfrmcapturedtimers.edit1.text
 msgctxt "TFRMCAPTUREDTIMERS.EDIT1.TEXT"
 msgid "10"
-msgstr ""
+msgstr "10"
 
 #: tfrmcapturedtimers.label1.caption
 msgid "The following WM_TIMER messages have been received"
@@ -10315,11 +10315,11 @@ msgstr ""
 #: tfrmcelistviewitemeditor.btnadditem.caption
 msgctxt "tfrmcelistviewitemeditor.btnadditem.caption"
 msgid "Add Item"
-msgstr ""
+msgstr "Ajouter un élément"
 
 #: tfrmcelistviewitemeditor.btnaddsubitem.caption
 msgid "Add SubItem"
-msgstr ""
+msgstr "Ajouter un sous-élément"
 
 #: tfrmcelistviewitemeditor.btncancel.caption
 msgctxt "TFRMCELISTVIEWITEMEDITOR.BTNCANCEL.CAPTION"
@@ -10334,7 +10334,7 @@ msgstr "Supprimer"
 #: tfrmcelistviewitemeditor.btnok.caption
 msgctxt "TFRMCELISTVIEWITEMEDITOR.BTNOK.CAPTION"
 msgid "OK"
-msgstr ""
+msgstr "OK"
 
 #: tfrmcelistviewitemeditor.caption
 msgid "Item editor"
@@ -10372,7 +10372,7 @@ msgstr "Valeur"
 #: tfrmchangedaddresses.changedlist.columns[2].caption
 msgctxt "tfrmchangedaddresses.changedlist.columns[2].caption"
 msgid "Count"
-msgstr ""
+msgstr "Compte"
 
 #: tfrmchangedaddresses.lblinfo.caption
 msgid "The following addresses have been changed by the code you selected"
@@ -10380,7 +10380,7 @@ msgstr ""
 
 #: tfrmchangedaddresses.menuitem1.caption
 msgid "Copy address to clipboard"
-msgstr ""
+msgstr "Copier l'adresse"
 
 #: tfrmchangedaddresses.menuitem2.caption
 msgctxt "TFRMCHANGEDADDRESSES.MENUITEM2.CAPTION"
@@ -10405,11 +10405,11 @@ msgstr ""
 #: tfrmchangedaddresses.micbshowashexadecimal.caption
 msgctxt "tfrmchangedaddresses.micbshowashexadecimal.caption"
 msgid "Show as hexadecimal"
-msgstr ""
+msgstr "Afficher en Hexadécimal"
 
 #: tfrmchangedaddresses.micommonalitiessubgroup.caption
 msgid "Find commonalities between addresses"
-msgstr ""
+msgstr "Trouver les points communs entre les adresses"
 
 #: tfrmchangedaddresses.micopytoaddresslist.caption
 msgid "Copy selected addresses to addresslist"
